fix content shift on hover

--- a/resources/style/register-page.css
+++ b/resources/style/register-page.css
@@ -19,7 +19,11 @@
     border: 2px solid black;
 }
 
+#submit-btn {
+    box-shadow: 5px 3px transparent;
+    margin: 3px;
+}
+
 #submit-btn:hover{
     box-shadow: 5px 3px gray;
-    margin: 3px;
 }
